Fixing padding on mobile.

--- a/src/admin.scss
+++ b/src/admin.scss
@@ -38,7 +38,7 @@ $link_color_hover: darken( #2c3a95, 15% );
 	.has-admin-container-body {
 		max-width: 69.5rem;
 		margin: 0 auto;
-		padding: 2.4em 0;
+		padding: 2.4em 20px;
 	}
 	.has-admin-container-wrap {
 		display: grid;
